UtahLiveDataTest/src/objects/AwardPaymentBudgetCategory__c.object
<CustomObject>
    <description>[Business] Budget Categories Associated with an Award</description>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Payment Budget Category</relationshipLabel>
        <relationshipName>Award_Payment_Budget_Category</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Award Payment Budget Category</relationshipLabel>
        <relationshipName>Award_Payment_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantProjectArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Project Area</label>
        <referenceTo>GrantServiceArea__c</referenceTo>
        <relationshipLabel>Award Payment Budget Category</relationshipLabel>
        <relationshipName>Award_Payment_Budget_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceAreaTitle__c</fullName>
        <formula>GrantProjectArea__r.ServiceArea__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceApplied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Advance Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvanceAvailable__c</fullName>
        <formula>YTDAdvancePaid__c  -  YTDAdvanceApplied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Advance Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDAdvancePaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Advance Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementAvailable__c</fullName>
        <formula>AwardedAmount__c  - (YTDReimbursementPaid__c +YTDAdvancePaid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Reimbursement Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDReimbursementPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>YTD Reimbursement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Award Payment Budget Category</label>
    <nameField>
        <label>Award Payment Budget Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award Payment Budget Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>